<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_movie_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/movie_favorite"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_favorite"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_movie_favorite"
            tools:listitem="@layout/item_favorite" />

        <TextView
            android:id="@+id/text_tv_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/tv_show_favorite"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rv_movie_favorite" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tv_favorite"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_tv_favorite"
            tools:listitem="@layout/item_favorite" />

        <TextView
            android:id="@+id/text_empty_movie_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_favorite_empty"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rv_movie_favorite"
            app:layout_constraintTop_toBottomOf="@+id/text_movie_favorite" />

        <TextView
            android:id="@+id/text_empty_tv_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_favorite_empty"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rv_tv_favorite"
            app:layout_constraintTop_toBottomOf="@+id/text_tv_favorite" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>